# autoagent

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  autoagent-dev-doc.md  constructeur_autoagent.html  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: pages.yml  tests.yml
autoagent/: __init__.py  agent.py  approval.py  dynamic.py  errors.py  evolution.py  http.py  logging.py  mcp.py  memory.py  orchestrator.py  otel.py  pipeline.py  registry.py  replay.py  requirements.txt  sandbox.py  schema.py  trace.py  workspace.py
autoagent/providers/: __init__.py  anthropic.py  base.py  (+3 more)
evals/: README.md  eval_memoire.py  resultats.json
examples/: .gitignore  demo_autoagent.py  demo_pure_python.py
examples_autoagent/: .gitignore  01_hello_tools.py  02_streaming.py  03_multi_provider.py  04_observabilite_budget.py  05_memoire_resumante.py  06_outils_dynamiques.py  07_sandbox_securite.py  08_multi_agents.py  09_sortie_structuree.py  10_bornement_verification.py  11_flux_deterministe.py  12_pseudonymisation_pii.py  13_prise_rdv_supervisee.py  14_base_sql.py  15_appel_entrant_fiche.py  16_questions_clarification.py  17_memoire_factuelle.py  18_corpus_url.py  19_boucle_autonome.py  20_injection_dejouee.py  21_record_replay.py  22_budget_et_reprise.py  README.md  _common.py
tests/: conftest.py  fake_mcp_server.py  test_agent.py  test_agent_as_tool.py  test_agent_cancel.py  test_agent_dynamic_prompt.py  test_agent_parallel_tools.py  test_agent_post_turn_hook.py  test_agent_streaming.py  test_approval.py  test_bridge.py  test_concurrency.py  test_docker_sandbox.py  test_dynamic.py  test_dynamic_parser_property.py  test_evolution.py  test_fact_memory.py  test_http.py  test_logging.py  test_mcp.py  test_memory.py  test_orchestrator.py  test_otel.py  test_pipeline.py  test_provider_parity.py  test_providers.py  test_providers_security.py  test_registry.py  test_registry_async.py  test_registry_validation.py  test_replay.py  test_routing_provider.py  test_runstate.py  test_sandbox.py  test_sandbox_bypasses.py  test_schema.py  test_schema_serialization.py  test_summarizing_memory_and_budget.py  test_taint.py  test_tool_policy.py  (+2 more)
(+1 files in other folders)
