[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoagent-core"
version = "0.11.0"
description = "LLM agent library with tool use, dynamic tool generation, and software evolution capabilities"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jsonschema>=4.0",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.20",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.1",
    "hypothesis>=6.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
include = ["autoagent*"]

[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint]
select = [
    "E",   "F",   # pyflakes + pycodestyle
    "W",           # pycodestyle warnings
    "B",           # flake8-bugbear
    "C4",          # flake8-comprehensions
    "I",           # isort
    "SIM",         # flake8-simplify
    "RUF",         # ruff-specific rules
]
ignore = [
    "E501",        # line too long (handled by formatter)
    "B008",        # do not perform function calls in argument defaults
    "SIM105",      # suppressible-exception (use contextlib.suppress)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S301", "S311"]  # allow assert, pickle, random in tests

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --tb=short"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests/", ".autoagent/"]
